# gamify-impl/src/main/java/ch/heigvd/gamify/entities/CategoryEntity.java
@@ -1,0 +1,2 @@
+package ch.heigvd.gamify.entities;public class Category {
+}
